--- a/output.css
+++ b/output.css
@@ -683,14 +683,14 @@ a:focus {
 }
 
 #hero {
-  background-image: url("../images/desktop/image-hero.jpg");
+  background-image: url("./images/desktop/image-hero.jpg");
   background-repeat: no-repeat;
   background-size: cover;
 }
 
 @media (max-width: 576px) {
   #hero  {
-    background-image: url("../images/mobile/image-hero.jpg");
+    background-image: url("./images/mobile/image-hero.jpg");
   }
 }
 
