--- a/src/output.css
+++ b/src/output.css
@@ -449,7 +449,7 @@ h1 {
   font-size: 40px;
   font-weight: 300;
   text-transform: uppercase;
-  line-height: 38px;
+  line-height: 1;
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity));
 }
@@ -466,7 +466,7 @@ h2 {
   font-size: 32px;
   font-weight: 300;
   text-transform: uppercase;
-  line-height: 1.05;
+  line-height: 1;
 }
 
 @media (min-width: 768px) {
@@ -505,6 +505,7 @@ h3 span {
 
 p {
   text-align: center;
+  font-size: 15px;
   line-height: 25px;
   opacity: 0.5;
 }
@@ -726,12 +727,12 @@ a:focus {
   z-index: 20;
 }
 
-.z-50 {
-  z-index: 50;
-}
-
 .z-40 {
   z-index: 40;
+}
+
+.z-50 {
+  z-index: 50;
 }
 
 .mx-4 {
@@ -775,6 +776,10 @@ a:focus {
 
 .mt-\[115px\] {
   margin-top: 115px;
+}
+
+.mt-6 {
+  margin-top: 1.5rem;
 }
 
 .flex {
@@ -847,31 +852,17 @@ a:focus {
   border-width: 1px;
 }
 
+.border-2 {
+  border-width: 2px;
+}
+
 .bg-black {
   --tw-bg-opacity: 1;
   background-color: rgb(0 0 0 / var(--tw-bg-opacity));
 }
 
-.bg-slate-800 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(30 41 59 / var(--tw-bg-opacity));
-}
-
-.bg-slate-900 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(15 23 42 / var(--tw-bg-opacity));
-}
-
-.p-4 {
-  padding: 1rem;
-}
-
 .p-6 {
   padding: 1.5rem;
-}
-
-.p-2 {
-  padding: 0.5rem;
 }
 
 .px-10 {
@@ -884,11 +875,6 @@ a:focus {
   padding-right: 1.5rem;
 }
 
-.py-10 {
-  padding-top: 2.5rem;
-  padding-bottom: 2.5rem;
-}
-
 .py-14 {
   padding-top: 3.5rem;
   padding-bottom: 3.5rem;
@@ -899,20 +885,8 @@ a:focus {
   padding-bottom: 0.75rem;
 }
 
-.pl-2 {
-  padding-left: 0.5rem;
-}
-
-.pr-4 {
-  padding-right: 1rem;
-}
-
-.pl-1 {
-  padding-left: 0.25rem;
-}
-
-.pr-3 {
-  padding-right: 0.75rem;
+.pt-\[68px\] {
+  padding-top: 68px;
 }
 
 .text-sm {
@@ -930,11 +904,6 @@ a:focus {
 
 .tracking-\[5px\] {
   letter-spacing: 5px;
-}
-
-.text-gray-400 {
-  --tw-text-opacity: 1;
-  color: rgb(156 163 175 / var(--tw-text-opacity));
 }
 
 .text-white {
@@ -1107,10 +1076,6 @@ a:focus {
 
   .lmd\:mt-\[34px\] {
     margin-top: 34px;
-  }
-
-  .lmd\:hidden {
-    display: none;
   }
 
   .lmd\:flex-col {
