--- a/input.css
+++ b/input.css
@@ -47,12 +47,17 @@
 		background-image: url("./images/desktop/image-hero.jpg");
 		background-repeat: no-repeat;
 		background-size: cover;
+		position: relative;
 	}
 
 	@media (max-width: 576px) {
 		#hero  {
 			background-image: url("./images/mobile/image-hero.jpg");
 		}
+	}
+	#hero::after {
+		content: '';
+		@apply absolute top-0 left-0 bottom-0 right-0 bg-[rgba(0,0,0,0.4)] pointer-events-none;
 	}
 }
 
