--- a/output.css
+++ b/output.css
@@ -687,12 +687,24 @@ a:focus {
   background-image: url("./images/desktop/image-hero.jpg");
   background-repeat: no-repeat;
   background-size: cover;
+  position: relative;
 }
 
 @media (max-width: 576px) {
   #hero  {
     background-image: url("./images/mobile/image-hero.jpg");
   }
+}
+
+#hero::after {
+  content: '';
+  pointer-events: none;
+  position: absolute;
+  top: 0px;
+  left: 0px;
+  bottom: 0px;
+  right: 0px;
+  background-color: rgba(0,0,0,0.4);
 }
 
 .absolute {
@@ -717,6 +729,10 @@ a:focus {
 
 .top-0 {
   top: 0px;
+}
+
+.top-1 {
+  top: 0.25rem;
 }
 
 .z-10 {
@@ -887,6 +903,10 @@ a:focus {
 
 .pt-\[68px\] {
   padding-top: 68px;
+}
+
+.text-left {
+  text-align: left;
 }
 
 .text-sm {
